<resources>
    <string name="app_name">Spotcheck</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Create a SpotCheck Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password must be at least six characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emailPattern">[A-z0-9\\.]+@[A-z0-9][A-z0-9\\-]*\\.[A-z]+((\\.[A-z]+)?)</string>
    <!--[A-z0-9.]+@[A-z0-9][A-z0-9\-]*.(com)|(org)|(edu)|(net)</string>-->

    <string name="email">null@example.com</string>
    <string name="user_name">nullFirst nullLast</string>

    <string name="nav_drawer_item1">Discover Spots</string>
    <string name="nav_drawer_item2">People</string>
    <string name="nav_drawer_item3">Create New Spot</string>
    <string name="nav_drawer_item4">Notifications</string>
    <string name="nav_drawer_item5">My Spots</string>
    <string name="nav_drawer_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search For Spots</string>
    <string name="card_accessibility_description">card</string>
    <string name="error_incorrect_authentication">The email or password is incorrect.</string>
</resources>
