<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_group">
        <item
            android:id="@+id/drawer_item1"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_drawer_item1"/>
        <item
            android:id="@+id/drawer_item2"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_drawer_item2"/>
        <item
            android:id="@+id/drawer_item3"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/nav_drawer_item3"/>
        <item
            android:id="@+id/drawer_item4"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_drawer_item4"/>
        <item
            android:id="@+id/drawer_item5"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/nav_drawer_item5"/>
    </group>
    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:id="@+id/drawer_item_logout"
            android:title="@string/nav_drawer_logout"/>
    </group>
</menu>
